new code ophalen

--- a/Python2.html
+++ b/Python2.html
@@ -46,7 +46,7 @@
                 return acc;
             }, {});
 
-            // Get an array of 25 different colors for the bars
+            // Get an array of 25(?) different colors for the bars
             const colors = [
                 'red', 'blue', 'green', 'orange', 'purple', 'yellow', 'cyan', 'magenta', 'brown',
                 'teal', 'pink', 'lime', 'indigo', 'maroon', 'gold', 'navy', 'coral', 'violet',
