--- a/Python3.html
+++ b/Python3.html
@@ -16,17 +16,17 @@
                     new Chart(ctx, {
                         type: 'bar',
                         data: {
-                            labels: labels,
+                            labels: ["aantal orders Clothing & Apparel"],
                             datasets: [{
                                 label: 'Male',
-                                data: [maleOrders,0],
+                                data: [maleOrders],
                                 backgroundColor: 'rgba(255, 99, 132, 0.2)',
                                 borderColor: 'rgb(255, 99, 132)',
                                 borderWidth: 1
                             },
                             {
                                 label: 'Female',
-                                data: [0,femaleOrders],
+                                data: [femaleOrders],
                                 backgroundColor: 'rgba(255, 159, 64, 0.2)',
                                 borderColor: 'rgb(255, 159, 64)',
                                 borderWidth: 1
