--- a/Python3.html
+++ b/Python3.html
@@ -7,33 +7,29 @@
         window.onload = function () {
             fetch("http://127.0.0.1:5000/tombarchart")
                 .then(response => response.json())
-                .then(data => {
+                .then(datar => {
                     const labels = ["Male", "Female"];
-                    const maleOrders = data.filter(item => item.Gender === "M").reduce((acc, item) => acc + item.Orders, 0);
-                    const femaleOrders = data.filter(item => item.Gender === "F").reduce((acc, item) => acc + item.Orders, 0);
+                    const maleOrders = datar.filter(item => item.Gender === "M").reduce((acc, item) => acc + item.Orders, 0);
+                    const femaleOrders = datar.filter(item => item.Gender === "F").reduce((acc, item) => acc + item.Orders, 0);
                     const ctx = document.getElementById('ageGroupProductCategoryChart');
 
                     new Chart(ctx, {
                         type: 'bar',
-                        data: {
-                            labels: ["aantal orders Clothing & Apparel"],
-                            datasets: [{
-                                label: 'Male',
-                                data: [maleOrders],
-                                backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                                borderColor: 'rgb(255, 99, 132)',
-                                borderWidth: 1
-                            },
-                            {
-                                label: 'Female',
-                                data: [femaleOrders],
-                                backgroundColor: 'rgba(255, 159, 64, 0.2)',
-                                borderColor: 'rgb(255, 159, 64)',
-                                borderWidth: 1
-                            }]
-                        }
-                    });
-                })
+  data : {
+  labels: labels,
+  datasets: [{
+    label: 'My First Dataset',
+    data: [maleOrders, femaleOrders],
+    backgroundColor: [
+      'rgba(255, 99, 132, 0.2)',
+      'rgba(255, 159, 64, 0.2)',
+    ],
+    borderColor: [
+      'rgb(255, 99, 132)',
+      'rgb(255, 159, 64)',
+    ],
+    borderWidth: 1
+  }]}})})
                 .catch(error => {
                     console.error('Error fetching data:', error);
                 });
