--- a/Python3.html
+++ b/Python3.html
@@ -3,7 +3,7 @@
 <head>
     <title>Festival Store Information</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
+    <script "Eerste grafiek">
         var myChart;
         window.onload = function () {
             toonTabel("Clothing & Apparel")
@@ -47,7 +47,113 @@
             myChart.destroy();
             toonTabel(keuze);
         }
+
+
     </script>
+
+    <script "Tweede grafiek">
+        var myChart2;
+        window.onload = function () {
+            toonTabel2("Healthcare")
+        }
+        function toonTabel2() {    
+            fetch("http://127.0.0.1:5000/JobEarnings")
+                .then(response => response.json())
+                .then(datar => {
+                    const occupations = datar.map((row) => row.Occupation);
+                    const labels = [...new Set(occupations)];
+
+                    const HealthcareOrders = datar.filter(item => item.Occupation === "Healthcare").reduce((acc, item) => acc + item.Amount, 0);
+                    const GovtOrders = datar.filter(item => item.Occupation === "Govt").reduce((acc, item) => acc + item.Amount, 0);
+                    const AutomobileOrders = datar.filter(item => item.Occupation === "Automobile").reduce((acc, item) => acc + item.Amount, 0);
+                    const ConstructionOrders = datar.filter(item => item.Occupation === "Construction").reduce((acc, item) => acc + item.Amount, 0);
+                    const FoodProcessingOrders = datar.filter(item => item.Occupation === "Food Processing").reduce((acc, item) => acc + item.Amount, 0);
+                    const LawyerOrders = datar.filter(item => item.Occupation === "Lawyer").reduce((acc, item) => acc + item.Amount, 0);
+                    const ITSectorOrders = datar.filter(item => item.Occupation === "IT Sector").reduce((acc, item) => acc + item.Amount, 0);
+                    const MediaOrders = datar.filter(item => item.Occupation === "Media").reduce((acc, item) => acc + item.Amount, 0);
+                    const BankingOrders = datar.filter(item => item.Occupation === "Banking").reduce((acc, item) => acc + item.Amount, 0);
+                    const RetailOrders = datar.filter(item => item.Occupation === "Retail").reduce((acc, item) => acc + item.Amount, 0);
+                    const HospitalityOrders = datar.filter(item => item.Occupation === "Hospitality").reduce((acc, item) => acc + item.Amount, 0);
+                    const AviationOrders = datar.filter(item => item.Occupation === "Aviation").reduce((acc, item) => acc + item.Amount, 0);
+                    const AgricultureOrders = datar.filter(item => item.Occupation === "Agriculture").reduce((acc, item) => acc + item.Amount, 0);
+                    const TextileOrders = datar.filter(item => item.Occupation === "Textile").reduce((acc, item) => acc + item.Amount, 0);
+                    const ChemicalOrders = datar.filter(item => item.Occupation === "Chemical").reduce((acc, item) => acc + item.Amount, 0);
+
+                    const ctx = document.getElementById('AmountOccupationsChart');
+
+                    myChart2 = new Chart(ctx, {
+                        type: 'bar',
+                        data: {
+                            labels: labels,
+                            datasets: [{
+                                label: labels,
+                                data: [HealthcareOrders,GovtOrders,AutomobileOrders,ConstructionOrders,FoodProcessingOrders,
+                                LawyerOrders,ITSectorOrders,MediaOrders,BankingOrders,RetailOrders,HospitalityOrders,
+                                AviationOrders,AgricultureOrders,TextileOrders,ChemicalOrders
+                            ],
+                                backgroundColor: [
+                                    'rgba(255, 99, 132, 0.2)',
+                                    'rgba(255, 159, 64, 0.2)',
+                                    'rgba(255, 205, 86, 0.2)',
+                                    'rgba(75, 192, 192, 0.2)',
+                                    'rgba(54, 162, 235, 0.2)',
+                                    'rgba(153, 102, 255, 0.2)',
+                                    'rgba(201, 203, 207, 0.2)',
+                                    'rgba(0, 255, 0, 0.2)',
+                                    'rgba(0, 0, 255, 0.2)',
+                                    'rgba(255, 0, 255, 0.2)',
+                                    'rgba(255, 255, 0, 0.2)',
+                                    'rgba(0, 255, 255, 0.2)',
+                                    'rgba(128, 128, 128, 0.2)',
+                                    'rgba(128, 0, 0, 0.2)',
+                                    'rgba(0, 128, 0, 0.2)',
+                                    'rgba(0, 0, 128, 0.2)',
+                                    'rgba(128, 0, 128, 0.2)',
+                                    'rgba(0, 128, 128, 0.2)',
+                                    'rgba(255, 99, 71, 0.2)',  
+                                    'rgba(128, 0, 0, 0.2)',   
+                                ],
+                                borderColor: [
+                                    'rgb(255, 99, 132)',
+                                    'rgb(255, 159, 64)',
+                                    'rgb(255, 205, 86)',
+                                    'rgb(75, 192, 192)',
+                                    'rgb(54, 162, 235)',
+                                    'rgb(153, 102, 255)',
+                                    'rgb(201, 203, 207)',
+                                    'rgb(0, 255, 0)',
+                                    'rgb(0, 0, 255)',
+                                    'rgb(255, 0, 255)',
+                                    'rgb(255, 255, 0)',
+                                    'rgb(0, 255, 255)',
+                                    'rgb(128, 128, 128)',
+                                    'rgb(128, 0, 0)',
+                                    'rgb(0, 128, 0)',
+                                    'rgb(0, 0, 128)',
+                                    'rgb(128, 0, 128)',
+                                    'rgb(0, 128, 128)',
+                                    'rgb(255, 99, 71)',      
+                                    'rgb(128, 0, 0)', 
+                                ],
+                                borderWidth: 1
+                            }]
+                        }
+                    });
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                });
+        }
+
+/*         function verander() {
+            var keuze = document.getElementById("mijndropdown").value;
+            myChart.destroy();
+            toonTabel(keuze);
+        } */
+
+
+    </script>
+
 </head>
 <body>
     <select onchange="verander()" id="mijndropdown">
@@ -70,6 +176,8 @@
         <option value="Decor">decor</option>
         <option value="Hand & Power Tools">hand- en elektrisch gereedschap</option>
     </select>
-    <canvas id="ageGroupProductCategoryChart" width="400" height="200"></canvas>
+    <canvas id="ageGroupProductCategoryChart" width="400" height="150"></canvas>
+
+    <canvas id="AmountOccupationsChart" width="400" height="150"></canvas>
 </body>
 </html>
