Adding files for az online

--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<script>
-</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script>
+        function fillinput(){
+            console.log("pressed");
+            document.getElementById("outputdiv").innerHTML = " This is in the div ";
+        }
+    </script>
 </head>
 <body>
-    <h1> Hello World!</h1>
+    <h1>The Awesome Webshop</h1>
+    <p>Loren blablalbalblalbaalkwjdlkwajdlwakdjwkldjkldj</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <input type="button" value="Klik hier" onclick="fillinput()">
+    <div id="outputdiv"></div> 
+    <br>
+    <h3>This is for a second commit test of CI-CD</h3>
 </body>
 </html>
