changed local to online

--- a/Python2.html
+++ b/Python2.html
@@ -34,7 +34,7 @@
         let ageGroupProductCategoryChart; // Store the second chart globally
         let genderProductCategoryChart; // Store the third chart globally
 
-        fetch("http://127.0.0.1:5000/tom")
+        fetch("https://yc2307python.azurewebsites.net/tom")
         .then(response => response.json())
         .then(data => {
             this.data = data; // Store the fetched data in the global variable
