push for online FE

--- a/Python2.html
+++ b/Python2.html
@@ -5,6 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+    <button onclick="window.location.href = 'index.html';">HOME</button>
     <h1>Festival Store Information</h1>
 
     <canvas id="productCategoryChart" width="400" height="200"></canvas>
