--- a/Python.html
+++ b/Python.html
@@ -5,6 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+    <button onclick="window.location.href = 'index.html';">HOME</button>
     <h1>Festival Store Information</h1>
     <table id="storeData">
         <thead>
@@ -32,7 +33,7 @@
     <canvas id="productCategoryChart" width="400" height="200"></canvas>
 
     <script>
-        fetch("http://127.0.0.1:5000/tom")
+        fetch("https://gray-field-0aa5fb003.3.azurestaticapps.net/tom")
         .then(response => response.json())
         .then(data => {
             const tableBody = document.getElementById('tableBody');
