--- a/Python.html
+++ b/Python.html
@@ -33,7 +33,8 @@
     <canvas id="productCategoryChart" width="400" height="200"></canvas>
 
     <script>
-        fetch("https://gray-field-0aa5fb003.3.azurestaticapps.net/tom")
+        // fetch("https://gray-field-0aa5fb003.3.azurestaticapps.net/tom")
+        fetch("https://yc2307python.azurewebsites.net/tom")
         .then(response => response.json())
         .then(data => {
             const tableBody = document.getElementById('tableBody');
