--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Loren blablalbalblalbaalkwjdlkwajdlwakdjwkldjkldj</p>
     <br>
     <button onclick="window.location.href = 'index.html';">HOME</button>
-    <button onclick="window.location.href = 'python.html';">Python1</button>
+    <button onclick="window.location.href = 'Python.html';">Python1</button>
     <button onclick="window.location.href = 'Python2.html';">Python2</button>
     <button onclick="window.location.href = 'Python3.html';">Python3</button>
     <button onclick="window.location.href = 'Python4.html';">Python4</button>
