--- a/Python.html
+++ b/Python.html
@@ -33,9 +33,9 @@
     <canvas id="productCategoryChart" width="400" height="200"></canvas>
 
     <script>
-        // fetch("https://gray-field-0aa5fb003.3.azurestaticapps.net/tom")
-        //fetch("https://yc2307python.azurewebsites.net/tom")
-        fetch('http://127.0.0.1:5000/tom')
+        fetch("https://zealous-island-01ea8fd03.3.azurestaticapps.net/tom")
+        // fetch("https://yc2307python.azurewebsites.net/tom")
+        // fetch('http://127.0.0.1:5000/tom')
         .then(response => response.json())
         .then(data => {
             const tableBody = document.getElementById('tableBody');
