--- a/Python2.html
+++ b/Python2.html
@@ -35,7 +35,7 @@
         let ageGroupProductCategoryChart; // Store the second chart globally
         let genderProductCategoryChart; // Store the third chart globally
 
-        fetch("https://yc2307python.azurewebsites.net/tom")
+        fetch("https://yc2307pythonbe.azurewebsites.net/tom")
         .then(response => response.json())
         .then(data => {
             this.data = data; // Store the fetched data in the global variable
