--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>The Awesome Webshop</h1>
-    <p>Loren blablalbalblalbaalkwjdlkwajdlwakdjwkldjkldj</p>
+    <p>A nice website.</p>
     <br>
     <button onclick="window.location.href = 'index.html';">HOME</button>
     <button onclick="window.location.href = 'Python.html';">Python1</button>
