--- a/Python.html
+++ b/Python.html
@@ -33,8 +33,8 @@
     <canvas id="productCategoryChart" width="400" height="200"></canvas>
 
     <script>
-        fetch("https://zealous-island-01ea8fd03.3.azurestaticapps.net/tom")
-        // fetch("https://yc2307python.azurewebsites.net/tom")
+        // fetch("https://zealous-island-01ea8fd03.3.azurestaticapps.net/tom")
+        fetch("https://yc2307pythonbe.azurewebsites.net/tom")
         // fetch('http://127.0.0.1:5000/tom')
         .then(response => response.json())
         .then(data => {
