frontend en java

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button onclick="window.location.href = 'Python3.html';">Python3</button>
     <button onclick="window.location.href = 'Python4.html';">Python4</button>
     <br>
+    <button onclick="window.location.href = 'Java.html';">Java</button>
     <br>
     <br>
     <input type="button" value="Klik hier" onclick="fillinput()">
