--- a/Java.html
+++ b/Java.html
@@ -4,12 +4,14 @@
     <title>Productenlijst</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="js/base.js"></script>
 </head>
 <body>
     <br>
     <button onclick="window.location.href = 'index.html';">HOME</button>
     <script>
-        fetch("https://yc2307javaapp.azurewebsites.net/alleproducten")
+        fetch(BACKEND_URL + "/alleproducten")
         .then(response => response.json())
         .then(data => {
             const tableBody = document.getElementById('tableBody');
@@ -91,7 +93,7 @@
         console.log(onsproduct)
         var onsProductJSON = JSON.stringify(onsproduct);
         console.log(onsProductJSON);
-        fetch("https://yc2307javaapp.azurewebsites.net/voegproductentoe", {
+        fetch(BACKEND_URL + "/voegproductentoe", {
             method: 'post',
             headers: {"Content-type": "application/json"},
             body: onsProductJSON
@@ -122,7 +124,7 @@
     });
 }
 function fetchDataAndUpdateTable() {
-    fetch("https://yc2307javaapp.azurewebsites.net/alleproducten")
+    fetch(BACKEND_URL + "/alleproducten")
     .then(response => response.json())
     .then(data => {
         const tableBody = document.getElementById('tableBody');
