--- a/Java2.html
+++ b/Java2.html
@@ -4,6 +4,8 @@
     <title>Account Management</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="js/base.js"></script>
 </head>
 <body>
     <div class="container">
@@ -57,7 +59,7 @@
         </div>
         <script>
             function fetchAccounts() {
-                fetch("https://yc2307javaapp.azurewebsites.net/api/accounts")
+                fetch(BACKEND_URL + "/api/accounts")
                 .then(response => response.json())
                 .then(data => {
                     const tableBody = document.getElementById('tableBody');
@@ -95,7 +97,7 @@
                     
                 };
         
-                fetch("https://yc2307javaapp.azurewebsites.net/api/saveaccounts", {
+                fetch(BACKEND_URL + "/api/saveaccounts", {
                     method: 'POST',
                     headers: {"Content-type": "application/json"},
                     body: JSON.stringify(newAccount)
