--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-        function fillinput(){
-            console.log("pressed");
-            document.getElementById("outputdiv").innerHTML = " This is in the div ";
-        }
-    </script>
+    <title>Awesome Webshop, QUACKERS!</title>
+    <!--Imports-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link src="js/scripts.js">
+    <!--/Imports-->
 </head>
+
+
+
+
+
+
+
 <body>
     <h1>The Awesome Webshop</h1>
     <p>A nice website.</p>
@@ -28,5 +33,8 @@
     <div id="outputdiv"></div> 
     <br>
     <h3>This is for a second commit test of CI-CD</h3>
+    <!--Bootstrap Script-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <!--/Bootstrap Script-->
 </body>
 </html>
