--- a/Python4.html
+++ b/Python4.html
@@ -382,7 +382,7 @@
                 // For example, you can create an object like:
                 const stateLatitudes = {
                     'Maharashtra': 19.7515,
-                    'Andhra\u00a0Pradesh': 15.9129, //Andhra\u00a0Pradesh
+                    'Andhra\u00a0Pradesh': 15.9129, //Andhra Pradesh 
                     'Uttar Pradesh': 26.8467,
                     'Karnataka': 15.3173,
                     'Gujarat': 22.2587,
@@ -535,8 +535,10 @@
     <canvas id="AmountProduct_CategoryChart" width="400" height="150"></canvas>
     <canvas id="AmountAgeGroupChart" width="400" height="150"></canvas>
     <div id="heatmap"></div>
-
     <div id="map"></div>
+    
+    <iframe title="BiTom" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=cf14740f-7546-4f99-b1c9-de8a70388eba&autoAuth=true&ctid=81dbf31c-d918-447b-9a35-0ee3c7b5b88d" frameborder="0" allowFullScreen="true"></iframe>
+
 
 </body>
 </html>
