--- a/Java.html
+++ b/Java.html
@@ -296,7 +296,7 @@ function laatproductenzien() {
                 <th>leverancier</th>
                 <th>naam</th>
                 <th>categorie</th>
-                <th>maat</th>a
+                <th>maat</th>
                 <th>prijs</th>
                 <th>productbeschrijving</th>
                 <th>productfoto</th>
