--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="Python4.html">DATA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Java2.html">Account Aanmaken</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -35,13 +36,25 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex">
+                   <!-- <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
                             <span id="shoppingcart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                         </button>
-                    </form>
+                    </form> -->
+                 <form class="d-flex">
+                    <div class="dropdown" id="shopping-cart-dropdown">
+                        <button class="btn btn-outline-dark dropdown-toggle" type="submit" id="shopping-cart-button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi-cart-fill me-1"></i>
+                            Cart
+                            <span id="shoppingcart-count" class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="shopping-cart-button" id="shopping-cart-content">
+                            <!-- Shopping cart content will be inserted here -->
+                        </div>
+                    </div>
+                  </form>
                 </div>
             </div>
         </nav>
