--- a/Java2.html
+++ b/Java2.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="assets/duck.ico" />
 
     <script src="js/base.js"></script>
 </head>
