--- a/Python4.html
+++ b/Python4.html
@@ -558,22 +558,6 @@
         </div>
     </nav>
 
-
-
-
-
-
-    
-    <div class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5">   
-        <div class="row">   
-            <div class="col-12 col-md-6">
-                <div id="heatmap"></div>
-            </div>
-            <div class="col-12 col-md-6">
-                <div id="map"></div>
-            </div>
-        </div>
-    </div>
     <div class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5 col-12 col-md-12 container">
         <div class="row">
             <nav>
@@ -626,9 +610,25 @@
             </div>
         </div>
     </div>
-    <div class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5 col-12 col-md-6">
+    <div class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5">   
+        <div class="row">   
+            <div class="col-12 col-md-12">
+                <div id="map"></div>
+            </div>
+        </div>
+    </div>
+
+    
+    <div class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5">   
+        <div class="row">   
+            <div class="col-12 col-md-12">
+                <div id="heatmap"></div>
+            </div>
+        </div>
+    </div>
+    <div class="shadow p-3 mb-5 bg-body rounded container px-2 px-lg-5 mt-5 col-12 col-md-12">
         <div class="row">
-            <div class="col align-self-end">
+            <div class=""> <!--col align-self-end-->
                 <div>
                     <iframe title="BiTom" src="https://app.powerbi.com/reportEmbed?reportId=cf14740f-7546-4f99-b1c9-de8a70388eba&autoAuth=true&ctid=81dbf31c-d918-447b-9a35-0ee3c7b5b88d" frameborder="0" allowFullScreen="true"></iframe>
                 </div>
