--- a/Python4.html
+++ b/Python4.html
@@ -630,7 +630,7 @@
         <div class="row">
             <div class=""> <!--col align-self-end-->
                 <div>
-                    <iframe title="BiTom" src="https://app.powerbi.com/reportEmbed?reportId=cf14740f-7546-4f99-b1c9-de8a70388eba&autoAuth=true&ctid=81dbf31c-d918-447b-9a35-0ee3c7b5b88d" frameborder="0" allowFullScreen="true"></iframe>
+                    <iframe style="height: 750px; width: 100%;" title="BiTom" src="https://app.powerbi.com/reportEmbed?reportId=cf14740f-7546-4f99-b1c9-de8a70388eba&autoAuth=true&ctid=81dbf31c-d918-447b-9a35-0ee3c7b5b88d" frameborder="0" allowFullScreen="true"></iframe>
                 </div>
             </div>
         </div>
