--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="A festival Webshop" />
         <meta name="author" content="sealreth" />
-        <title>AWESOME fastival webs</title>
+        <title>AWESOME festival webs</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/duck.ico" />
         <!-- Bootstrap icons-->
