--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="col-12 col-md-4 mb-3">
                             <div class="card h-100">
                                 <!-- Product image-->
-                                <img onclick="window.location.href="product.html?id=${product.id}""class="card-img-top" src="${product.productfoto}" alt="..." />
+                                <img style= "cursor: pointer;" onclick= "window.location.href='product.html?id=${product.id}'"  class="card-img-top" src="${product.productfoto}" alt="..." />
                                 <!-- Product details-->
                                 <div class="card-body p-4">
                                     <div class="text-center">
